# calculator

./: .gitignore  CMakeLists.txt
src/: calc_data.h  calculator.cpp  calculator.h  checker.cpp  checker.h  expression.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  printer.cpp  printer.h  runner.cpp  runner.h
tests/: calculator_tests.cpp  checker_tests.cpp  parser_tests.cpp
